intTests/test_type_errors/err051.log.good
Loading file "err051.saw"
Type errors:
  err051.saw:8:9-8:17: Inaccessible variable: "addsimp'" (err051.saw:8:9-8:17)
  err051.saw:8:9-8:17: This command is available only after running `enable_deprecated`.

FAILED
